# DatagramFileTransfer

./: CMakeLists.txt  README.md  cambiamenti.txt  client.c  compilazione.txt  dataStructures.c  dataStructures.h  externvars.h  main.c  mainServer.c  makefile  server.c  server.h
